--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 .navbar-nav {
   margin-left: 50%;
+  margin: 0 auto;
 }
 .navbar-brand img {
   max-width: 48px;
@@ -14,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
 
 .button {
@@ -57,6 +59,9 @@ select {
   border-radius: 10px 0px 0px 0px;
   border: 1px 0px 0px 0px;
   opacity: 0px;
+}
+input [type="checkbox"] {
+  accent-color: #29b24e;
 }
 
 .burger {
@@ -214,34 +219,56 @@ footer {
   margin: 50px;
   border: 1px solid #d0d0d0;
 }
-@media (max-width: 300px) {
-  .large-imges {
-    width: 335px;
-    height: 435px;
+@media (max-width: 1024px) {
+  ul li {
+    display: none;
+  }
+  .button {
+    display: none;
   }
   .conteiner {
-    max-width: 375px;
-    max-height: 739px;
-    top: 569px;
-    gap: 0px;
+    width: 375px;
+    width: 100%;
+    top: 378px;
     border-radius: 24px 0px 0px 0px;
-    opacity: 0px;
+    transform: translateY(-50px);
   }
-}
-
-@media (max-height: 300px) {
   .large-imges {
-    width: 335px;
-    height: 435px;
-    transform: translateY(-200%);
+    max-width: 335px;
+    max-height: 400px;
+    width: 100%;
   }
-  .conteiner {
+  .section-one {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
+    transform: translateY(50px);
+  }
+  .section-two {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center;
+    align-items: center; */
+    transform: translateY(400px);
+  }
+  footer {
     max-width: 375px;
-    max-height: 739px;
-    top: 569px;
-    gap: 0px;
-    border-radius: 24px 0px 0px 0px;
-    opacity: 0px;
-    transform: translateX(200px);
+    width: 100%;
+    margin: 0 auto;
+    transform: translateY(550px);
+  }
+  .link-footer {
+    display: flex;
+    flex-direction: column;
+  }
+  .social-media {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: -150px;
+  }
+  .support {
+    display: none;
   }
 }
